// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test du composant Tableau > DOIT afficher correctement les en-têtes et les lignes 1`] = `
<table
  class="min-w-full border-spacing-0 rounded-t-xl border border-solid border-gris-sombre text-sm shadow-lg"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="text-center first:text-left"
      >
        <span
          class="font-marianne-bold px-4 text-bleu"
        >
          N dossier
        </span>
      </th>
      <th
        class="text-center first:text-left"
      >
        <span
          class="font-marianne-bold px-4 text-bleu"
        >
          Nature acte
        </span>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class=" odd:bg-bleu/15"
    >
      <td
        class="px-4 py-1.5 text-center first:text-left"
      >
        001
      </td>
      <td
        class="px-4 py-1.5 text-center first:text-left"
      >
        Naissance mineur
      </td>
    </tr>
    <tr
      class=" odd:bg-bleu/15"
    >
      <td
        class="px-4 py-1.5 text-center first:text-left"
      >
        002
      </td>
      <td
        class="px-4 py-1.5 text-center first:text-left"
      >
        Naissance mineur
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Test du composant Tableau > DOIT afficher un message lorsqu'il n'y a pas de lignes 1`] = `
<table
  class="min-w-full border-spacing-0 rounded-t-xl border border-solid border-gris-sombre text-sm shadow-lg"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="text-center first:text-left"
      >
        <span
          class="font-marianne-bold px-4 text-bleu"
        >
          N dossier
        </span>
      </th>
      <th
        class="text-center first:text-left"
      >
        <span
          class="font-marianne-bold px-4 text-bleu"
        >
          Nature acte
        </span>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class="py-2"
        colspan="2"
      >
        <div
          class="flex flex-col items-center"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ReportIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM12 17.3c-.72 0-1.3-.58-1.3-1.3 0-.72.58-1.3 1.3-1.3.72 0 1.3.58 1.3 1.3 0 .72-.58 1.3-1.3 1.3zm1-4.3h-2V7h2v6z"
            />
          </svg>
          <div>
            Aucune donnée disponible
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
